--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,4 +6,11 @@
         <item>Mensual</item>
         <item>Anual</item>
     </string-array>
+
+
+    <string-array name="categorias_productos">
+        <item>Plato</item>
+        <item>Bebida</item>
+    </string-array>
+
 </resources>
