--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -112,6 +112,7 @@
     <color name="active_track_color">#CD99D59E</color>
 
     <color name="gray_300">#E0E0E0</color>
+    <color name="gray_500">#6B7280</color>
 
 
 
