--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,16 @@
     </style>
 
     <style name="Theme.Foodisea" parent="Base.Theme.Foodisea" />
+
+    <style name="CustomTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@color/btn_medium</item>
+        <item name="hintTextColor">@color/btn_medium</item>
+        <item name="android:textColorHint">@color/gray_500</item>
+        <item name="startIconTint">@color/gray_500</item>
+        <item name="endIconTint">@color/gray_500</item>
+        <!-- Si quieres personalizar el color del borde en diferentes estados -->
+        <item name="boxStrokeErrorColor">@color/error</item>
+    </style>
+
 </resources>
+
