--- a/app/src/main/res/layout/activity_admin_res_home.xml
+++ b/app/src/main/res/layout/activity_admin_res_home.xml
@@ -26,8 +26,7 @@
             android:contentDescription="@string/btnProfile"
             app:icon="@drawable/rounded_person_24"
             app:iconTint="@color/btn_medium"
-            android:backgroundTint="@color/bg_gray_light"
-            />
+            android:backgroundTint="@color/bg_gray_light" />
 
         <!-- Logo Foodisea -->
         <ImageView
@@ -56,7 +55,7 @@
         android:layout_height="180dp"
         android:contentDescription="@string/imgRest"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/restaurant_image" />
+        app:srcCompat="@drawable/placeholder_image" />
 
     <LinearLayout
         android:id="@+id/nombreRestaurantLayout"
@@ -76,7 +75,6 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <!-- Calificación del restaurante -->
         <TextView
             android:id="@+id/tvRestaurantRating"
             android:layout_width="wrap_content"
@@ -99,7 +97,6 @@
         android:textSize="14sp"
         android:textAlignment="viewStart"
         android:layout_marginBottom="8dp"/>
-
 
     <LinearLayout
         android:layout_width="match_parent"
