--- a/app/src/main/res/layout/activity_admin_res_nuevo_producto.xml
+++ b/app/src/main/res/layout/activity_admin_res_nuevo_producto.xml
@@ -143,7 +143,7 @@
                 android:hint="Categoría"
                 app:startIconDrawable="@drawable/ic_category"
                 app:startIconTint="@color/gray_300"
-                style="@style/CustomTextInputLayout">
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
 
                 <AutoCompleteTextView
                     android:id="@+id/spinnerCategoria"
